--- a/service-a/pom.xml
+++ b/service-a/pom.xml
@@ -45,6 +45,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+                <dependency>
+                    <groupId>com.example</groupId>
+                    <artifactId>service-a-events</artifactId>
+                    <version>1.0-SNAPSHOT</version>
+                </dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
