--- a/service-c/src/main/resources/application.yml
+++ b/service-c/src/main/resources/application.yml
@@ -15,6 +15,12 @@ eureka:
         preferIpAddress: true
         # push heartbeat every 10 seconds to the registry
         leaseRenewalIntervalInSeconds: 10
+        
+# Message channel configuration
+spring.cloud.stream.bindings:
+    # all configurations for the 'fooEvent' channel
+    fooEvent:
+        group: fooEventGroup
 
 ---
 # DOCKER CONFIGURATION
