--- a/service-a/pom.xml
+++ b/service-a/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>spring-cloud-stream-schema</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>            
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
@@ -50,10 +54,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>com.h2database</groupId>
@@ -65,6 +69,13 @@
             <artifactId>avro</artifactId>
             <version>${avro.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>common-model</artifactId>
+            <version>1.0-SNAPSHOT</version>                        
+        </dependency>     
+        
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
